welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:6: error: type mismatch;
 found   : Unit
 required: Boolean
	vuBiscuit = true
                  ^Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
if (estSurBiscuit()) {
^